fixed page overflow

--- a/css/screen.css
+++ b/css/screen.css
@@ -23,6 +23,7 @@ html {
   color: white;
   background-color: #000000;
   padding: 0.5em; /* 8 / 16  */
+  overflow-x: hidden;
 
   }
 
